<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/bkgdPadrao"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.MainMenu">

    <RelativeLayout android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rl1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

        <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/adViewMainMenu"
                ads:adSize="BANNER"
                ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="2dp">
        </com.google.android.gms.ads.AdView>

        <RelativeLayout android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/rl2"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="60dp">

            <Button
                    android:text="@string/strLotofacil"
                    android:textSize="@dimen/txtSizeMainMenu"
                    android:textColor="@color/txtColorPadrao"
                    android:layout_width="@dimen/btnMenuMenor_w"
                    android:layout_height="@dimen/btnMenuMenor_h"
                    android:id="@+id/btnLotofacil"
                    android:background="@drawable/btncorner_lotofacil"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_margin="2dp"/>

            <Button
                    android:text="@string/strQuina"
                    android:textSize="@dimen/txtSizeMainMenu"
                    android:textColor="@color/txtColorPadrao"
                    android:layout_width="@dimen/btnMenuMenor_w"
                    android:layout_height="@dimen/btnMenuMenor_h"
                    android:id="@+id/btnQuina"
                    android:background="@drawable/btncorner_quina"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_toEndOf="@+id/btnLotofacil"
                    android:layout_toRightOf="@+id/btnLotofacil"
                    android:layout_margin="2dp"/>

            <Button
                    android:text="@string/strDuplaSena"
                    android:textSize="@dimen/txtSizeMainMenu"
                    android:textColor="@color/txtColorPadrao"
                    android:layout_width="@dimen/btnMenuMenor_w"
                    android:layout_height="@dimen/btnMenuMenor_h"
                    android:id="@+id/btnDupSena"
                    android:background="@drawable/btncorner_dupla_sena"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_below="@+id/btnLotofacil"
                    android:layout_margin="2dp"/>

            <Button
                    android:text="@string/strLotomania"
                    android:textSize="@dimen/txtSizeMainMenu"
                    android:textColor="@color/txtColorPadrao"
                    android:layout_width="@dimen/btnMenuMenor_w"
                    android:layout_height="@dimen/btnMenuMenor_h"
                    android:id="@+id/btnLotomania"
                    android:background="@drawable/btncorner_lotomania"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_toEndOf="@+id/btnDupSena"
                    android:layout_toRightOf="@+id/btnDupSena"
                    android:layout_below="@+id/btnQuina"
                    android:layout_margin="2dp"/>

        </RelativeLayout>

        <Button
                android:text="@string/strMegaSena"
                android:textSize="22sp"
                android:textColor="@color/txtColorPadrao"
                android:layout_width="200dp"
                android:layout_height="140dp"
                android:id="@+id/btnMegSena"
                android:background="@drawable/btncorner_mega_sena"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_below="@+id/rl2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="2dp"/>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>