<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/bkgdMegaSena"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.MegaSena">

    <TextView android:layout_width="wrap_content"
              android:layout_height="60dp"
              android:id="@+id/txtMegasena"
              android:text="@string/strMegaSena"
              android:textStyle="italic"
              android:textSize="40sp"
              android:textColor="@color/txtColorPadrao"
              android:textAlignment="center"
              android:gravity="center"
              android:background="@color/colorMegaSena"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toTopOf="parent"
              android:layout_marginTop="4dp"
              android:layout_marginLeft="114dp"
              android:fontFamily="sans-serif-black"/>

    <ImageView android:layout_width="60dp"
               android:layout_height="60dp"
               android:id="@+id/trevomegasena"
               android:background="@drawable/trevomegasena"
               app:layout_constraintEnd_toStartOf="@+id/txtMegasena"
               app:layout_constraintTop_toTopOf="parent"
               android:layout_marginTop="4dp"
               android:layout_marginEnd="0dp"
               android:layout_marginRight="0dp"/>

    <TextView
            android:text=""
            android:textColor="@color/txtBolas"
            android:fontFamily="sans-serif-black"
            android:textSize="@dimen/txtSizeBolas"
            android:gravity="center"
            android:layout_width="@dimen/imgBola_hw"
            android:layout_height="@dimen/imgBola_hw"
            android:background="@drawable/bola_a"
            android:id="@+id/view1_m"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="88dp"
            android:layout_marginStart="88dp"
            android:layout_marginTop="@dimen/marginTop_ms"/>

    <TextView
            android:text=""
            android:textColor="@color/txtBolas"
            android:fontFamily="sans-serif-black"
            android:textSize="@dimen/txtSizeBolas"
            android:gravity="center"
            android:layout_width="@dimen/imgBola_hw"
            android:layout_height="@dimen/imgBola_hw"
            android:background="@drawable/bola_b"
            android:id="@+id/view2_m"
            android:layout_marginTop="@dimen/marginTop_ms"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/view1_m"/>

    <TextView
            android:text=""
            android:textColor="@color/txtBolas"
            android:fontFamily="sans-serif-black"
            android:textSize="@dimen/txtSizeBolas"
            android:gravity="center"
            android:layout_width="@dimen/imgBola_hw"
            android:layout_height="@dimen/imgBola_hw"
            android:background="@drawable/bola_j"
            android:layout_marginTop="@dimen/marginTop_ms"
            android:id="@+id/view3_m"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/view2_m"/>

    <TextView
            android:text=""
            android:textColor="@color/txtBolas"
            android:fontFamily="sans-serif-black"
            android:textSize="@dimen/txtSizeBolas"
            android:gravity="center"
            android:layout_width="@dimen/imgBola_hw"
            android:layout_height="@dimen/imgBola_hw"
            android:background="@drawable/bola_i"
            android:id="@+id/view4_m"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view1_m"
            android:layout_marginLeft="88dp"
            android:layout_marginStart="88dp"/>

    <TextView
            android:text=""
            android:textColor="@color/txtBolas"
            android:fontFamily="sans-serif-black"
            android:textSize="@dimen/txtSizeBolas"
            android:gravity="center"
            android:layout_width="@dimen/imgBola_hw"
            android:layout_height="@dimen/imgBola_hw"
            android:background="@drawable/bola_h"
            android:id="@+id/view5_m"
            app:layout_constraintTop_toBottomOf="@+id/view2_m"
            app:layout_constraintStart_toEndOf="@+id/view4_m"/>

    <TextView
            android:text=""
            android:textColor="@color/txtBolas"
            android:fontFamily="sans-serif-black"
            android:textSize="@dimen/txtSizeBolas"
            android:gravity="center"
            android:layout_width="@dimen/imgBola_hw"
            android:layout_height="@dimen/imgBola_hw"
            android:background="@drawable/bola_d"
            android:id="@+id/view6_m"
            app:layout_constraintTop_toBottomOf="@+id/view3_m"
            app:layout_constraintStart_toEndOf="@+id/view5_m"/>

    <Button android:layout_width="@dimen/btnGerar_w"
            android:layout_height="wrap_content"
            android:id="@+id/btnMegGerar"
            android:text="@string/strBtnGerar"
            android:textColor="@color/txtColorPadrao"
            android:background="@drawable/btncorner"
            style="@style/Widget.AppCompat.Button.Borderless"
            app:layout_constraintTop_toBottomOf="@+id/view5_m"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="146dp"/>

    <androidx.appcompat.widget.SwitchCompat
            android:text="Estatística  "
            android:textSize="@dimen/txtSwitch"
            android:thumb="@drawable/thumb"
            android:track="@drawable/track"
            app:showText="true"
            android:textOn="@string/strON"
            android:textOff="@string/strOFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/switchMegaSena"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="92dp" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>

    <Button
            android:text="@string/strBtnCopy"
            android:textColor="@color/txtColorPadrao"
            android:background="@drawable/btncorner"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnCopMega"
            app:layout_constraintTop_toBottomOf="@+id/view6_m"
            app:layout_constraintStart_toEndOf="@+id/btnMegGerar"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>