<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/bkgdDuplaSena"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.DuplaSena">

    <TextView android:layout_width="wrap_content"
              android:layout_height="60dp"
              android:id="@+id/txtDuplasena"
              android:text="@string/strDuplaSena"
              android:textStyle="italic"
              android:textSize="40sp"
              android:textColor="@color/txtColorPadrao"
              android:textAlignment="center"
              android:gravity="center"
              android:background="@color/colorDuplaSena"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toTopOf="parent"
              android:layout_marginTop="4dp"
              android:layout_marginLeft="108dp"
              android:fontFamily="sans-serif-black"/>

    <ImageView android:layout_width="60dp"
               android:layout_height="60dp"
               android:id="@+id/trevodupsena"
               android:background="@drawable/trevoduplasena"
               app:layout_constraintEnd_toStartOf="@+id/txtDuplasena"
               app:layout_constraintTop_toTopOf="parent"
               android:layout_marginTop="4dp"
               android:layout_marginEnd="0dp"
               android:layout_marginRight="0dp"/>

    <TextView
            android:text=""
            android:textColor="@color/txtBolas"
            android:fontFamily="sans-serif-black"
            android:textSize="@dimen/txtSizeBolas"
            android:gravity="center"
            android:layout_width="@dimen/imgBola_hw"
            android:layout_height="@dimen/imgBola_hw"
            android:background="@drawable/bola_a"
            android:id="@+id/view1_d"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="88dp"
            android:layout_marginStart="88dp"
            android:layout_marginTop="@dimen/marginTop_ms"/>

    <TextView
            android:text=""
            android:textColor="@color/txtBolas"
            android:fontFamily="sans-serif-black"
            android:textSize="@dimen/txtSizeBolas"
            android:gravity="center"
            android:layout_width="@dimen/imgBola_hw"
            android:layout_height="@dimen/imgBola_hw"
            android:background="@drawable/bola_b"
            android:id="@+id/view2_d"
            android:layout_marginTop="@dimen/marginTop_ms"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/view1_d"/>

    <TextView
            android:text=""
            android:textColor="@color/txtBolas"
            android:fontFamily="sans-serif-black"
            android:textSize="@dimen/txtSizeBolas"
            android:gravity="center"
            android:layout_width="@dimen/imgBola_hw"
            android:layout_height="@dimen/imgBola_hw"
            android:background="@drawable/bola_c"
            android:layout_marginTop="@dimen/marginTop_ms"
            android:id="@+id/view3_d"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/view2_d"/>

    <TextView
            android:text=""
            android:textColor="@color/txtBolas"
            android:fontFamily="sans-serif-black"
            android:textSize="@dimen/txtSizeBolas"
            android:gravity="center"
            android:layout_width="@dimen/imgBola_hw"
            android:layout_height="@dimen/imgBola_hw"
            android:background="@drawable/bola_d"
            android:id="@+id/view4_d"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view1_d"
            android:layout_marginLeft="88dp"
            android:layout_marginStart="88dp"/>

    <TextView
            android:text=""
            android:textColor="@color/txtBolas"
            android:fontFamily="sans-serif-black"
            android:textSize="@dimen/txtSizeBolas"
            android:gravity="center"
            android:layout_width="@dimen/imgBola_hw"
            android:layout_height="@dimen/imgBola_hw"
            android:background="@drawable/bola_e"
            android:id="@+id/view5_d"
            app:layout_constraintTop_toBottomOf="@+id/view2_d"
            app:layout_constraintStart_toEndOf="@+id/view4_d"/>

    <TextView
            android:text=""
            android:textColor="@color/txtBolas"
            android:fontFamily="sans-serif-black"
            android:textSize="@dimen/txtSizeBolas"
            android:gravity="center"
            android:layout_width="@dimen/imgBola_hw"
            android:layout_height="@dimen/imgBola_hw"
            android:background="@drawable/bola_f"
            android:id="@+id/view6_d"
            app:layout_constraintTop_toBottomOf="@+id/view3_d"
            app:layout_constraintStart_toEndOf="@+id/view5_d"/>

    <Button android:layout_width="@dimen/btnGerar_w"
            android:layout_height="wrap_content"
            android:id="@+id/btnDupGerar"
            android:text="@string/strBtnGerar"
            android:textColor="@color/txtColorPadrao"
            android:background="@drawable/btncorner"
            style="@style/Widget.AppCompat.Button.Borderless"
            app:layout_constraintTop_toBottomOf="@+id/view5_d"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="146dp"/>

    <androidx.appcompat.widget.SwitchCompat
            android:text="Estatística  "
            android:textSize="@dimen/txtSwitch"
            android:thumb="@drawable/thumb"
            android:track="@drawable/track"
            app:showText="true"
            android:textOn="@string/strON"
            android:textOff="@string/strOFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switchDuplasena"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="104dp" android:layout_marginRight="8dp" android:layout_marginEnd="8dp"/>

    <Button
            android:text="@string/strBtnCopy"
            android:textColor="@color/txtColorPadrao"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btncorner"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/btnCopDupSena"
            app:layout_constraintTop_toBottomOf="@+id/view6_d"
            app:layout_constraintStart_toEndOf="@+id/btnDupGerar"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>